<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cicada_dialog_error_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cicada_net_state_mobile"
        android:textColor="@color/cicada_white"
        android:textSize="@dimen/cicada_loading_font_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/continue_play"
            android:layout_width="82dp"
            android:layout_height="30dp"
            android:background="@drawable/cicada_rr_bg_white"
            android:gravity="center"
            android:text="@string/cicada_net_state_mobile_yes"
            android:textColor="@color/cicada_white"
            android:textSize="@dimen/cicada_error_font_size" />

        <TextView
            android:id="@+id/stop_play"
            android:layout_width="82dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/cicada_rr_bg_blue"
            android:gravity="center"
            android:text="@string/cicada_net_state_mobile_no"
            android:textColor="@color/cicada_blue"
            android:textSize="@dimen/cicada_error_font_size" />
    </LinearLayout>
</LinearLayout>